@@ -82,7 +82,7 @@ void cmd_pen() {
 
 /*
  * ARRAY ROUTINES - First element
- * funcCode is the function code, r is the return value of the 
+ * funcCode is the function code, r is the return value of the
  * function, elem_p is the element
  */
 void dar_first(long funcCode, var_t *r, var_t *elem_p) {
@@ -114,7 +114,7 @@ void dar_first(long funcCode, var_t *r, var_t *elem_p) {
 
 /*
  * ARRAY ROUTINES - Next (each) element
- * funcCode is the function code, r is the return value of 
+ * funcCode is the function code, r is the return value of
  * the function, elem_p is the current element
  */
 void dar_next(long funcCode, var_t *r, var_t *elem_p) {
@@ -160,7 +160,7 @@ void dar_next(long funcCode, var_t *r, var_t *elem_p) {
 
 /*
  * ARRAY ROUTINES - Last element
- * funcCode is the function code, r is the return value of 
+ * funcCode is the function code, r is the return value of
  * the function, elem_p is the element
  */
 void dar_final(long funcCode, var_t *r, int count) {
@@ -689,7 +689,7 @@ var_int_t cmd_fre(var_int_t arg) {
         while (n != 0 && ch == ' ') {
           n = read(memfd, &ch, sizeof(ch));
         }
-        
+
         // read the value
         long long val = 0;
         while (n != 0 && isdigit(ch)) {
@@ -1191,7 +1191,7 @@ void cmd_str0(long funcCode, var_t *r) {
     // str <- INKEY$
     //
     if (!dev_kbhit()) {
-      dev_events(1);
+      dev_events(par_getval(2));
     }
     if (dev_kbhit()) {
       ch = dev_getch();
